:bug: fix: Removes gap between pages
For edge & chrome

--- a/styles/layout/_base.scss
+++ b/styles/layout/_base.scss
@@ -116,6 +116,7 @@ main {
   justify-content: center;
   align-content: center;
   gap: 15px;
+  margin-top: -1px;
   padding-top: 70px;
   font-size: 1.1rem;
 
